Fixed issues that the search bar and main content
area had. When zooming out, the pixel resizing algortihm used by Gecko
browsers has rounding inaccuracies which caused some elements to be
resized too large to fit on the same line. Modifying these elements to
use auto widths makes them more responsive.

--- a/CTCODS/CTCClassSchedule/Content/ClassSchedule.css
+++ b/CTCODS/CTCClassSchedule/Content/ClassSchedule.css
@@ -338,8 +338,8 @@ li.classDetailsLink
 
 
 #container.sidebar #content {
-    float: left;
-    width: 798px;
+    overflow: hidden;
+    width: auto;
 
 }
 #pageTitle
@@ -638,9 +638,9 @@ li.subject { list-style-type: none;}
 
 #searchbutton-wrap /*Note IE7 hack*/
 {
-    float: left;
+    overflow: hidden;
     min-height: 20px;
-    width: 70px;
+    width: auto;
     border-left: 1px solid #173817;
     background: #f4f8e6; /* Old browsers */
     background: -moz-linear-gradient(top,  #f4f8e6 36%, #d6dbc3 65%); /* FF3.6+ */
